--- a/callback.ipynb
+++ b/callback.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,15 +74,15 @@
     "for fk, bk in zip(js['hookF'], js['hookB']):\n",
     "    f_cur.append(fk['cur'][0])\n",
     "    f_max.append(fk['max'][0])\n",
-    "    f_name.append(fk['name'][0])\n",
+    "    f_name.append(fk['name'])\n",
     "    b_cur.append(bk['cur'][0])\n",
     "    b_max.append(bk['max'][0])\n",
-    "    b_name.append(bk['name'][0])"
+    "    b_name.append(bk['name'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -130,29 +130,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([ -34405888,   93392384,  -89734144, -106298368,   -1406976,\n",
-       "        106082304,  168443904,   -2764800,   42995712,   -7782400,\n",
-       "         11536384,  -31129600,    2655232, -124518400])"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "softmax     +11.47 MB\n",
+      "Conv3d      -34.41 MB\n",
+      "UnetUp3_CT  +93.39 MB\n",
+      "UnetUp3_CT  -89.73 MB\n",
+      "UnetUp3_CT  -106.30 MB\n",
+      "UnetUp3_CT  -1.41 MB\n",
+      "UnetConv3   +106.08 MB\n",
+      "MaxPool3d   +168.44 MB\n",
+      "UnetConv3   -2.76 MB\n",
+      "MaxPool3d   +43.00 MB\n",
+      "UnetConv3   -7.78 MB\n",
+      "MaxPool3d   +11.54 MB\n",
+      "UnetConv3   -31.13 MB\n",
+      "MaxPool3d   +2.66 MB\n",
+      "UnetConv3   -124.52 MB\n"
+     ]
     }
    ],
    "source": [
-    "np.array(list(reversed(b_cur))[1:]) - np.array(list(reversed(b_cur))[:-1]) "
+    "a = [f_cur[-1]]+list(reversed(b_cur))[:-1]\n",
+    "b = list(reversed(b_cur))\n",
+    "for i,j in zip(list(reversed(b_name)), np.array(b) - np.array(a)):\n",
+    "    txt = i.replace('[','').replace(\"'\",'').replace(']','')\n",
+    "    s = ''.join([' ' for i in range(10-len(txt))])\n",
+    "    v = \"-\"+str(convert_bytes(abs(j))) if j<0 else \"+\"+str(convert_bytes(abs(j)))\n",
+    "    print(txt,s,v)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34.41 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(convert_bytes(14*80*80*32*4*3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -173,22 +205,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'['"
+       "[\"['UnetConv3']\",\n",
+       " \"['MaxPool3d']\",\n",
+       " \"['UnetConv3']\",\n",
+       " \"['MaxPool3d']\",\n",
+       " \"['UnetConv3']\",\n",
+       " \"['MaxPool3d']\",\n",
+       " \"['UnetConv3']\",\n",
+       " \"['MaxPool3d']\",\n",
+       " \"['UnetConv3']\",\n",
+       " \"['UnetUp3_CT']\",\n",
+       " \"['UnetUp3_CT']\",\n",
+       " \"['UnetUp3_CT']\",\n",
+       " \"['UnetUp3_CT']\",\n",
+       " \"['Conv3d']\",\n",
+       " \"['softmax']\"]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f_name[0]"
+    "f_name"
    ]
   },
   {
